--- a/Parbat_map/templates/index.html
+++ b/Parbat_map/templates/index.html
@@ -15,7 +15,9 @@
         crossorigin=""></script>
     <style>
         body {
-            font: roboto;
+            font: roboto; 
+            margin: 0;
+            padding:0;
         }
 
         header {
@@ -44,6 +46,7 @@
             color: white;
             margin-left: 110px;
             margin-right: 110px;
+            text-decoration: none;
         }
 
         .nav1anch:hover {
@@ -83,8 +86,8 @@
 
         <nav>
             <p>Fire Risk Map</p>
-            <a href="#" class="nav1anch">Home</a>
-            <a href="#" class="nav1anch">About Project</a>
+            <a href="index.html" class="nav1anch">Home</a>
+            <a href="index1.html" class="nav1anch">About Project</a>
             <a href="#" class="nav1anch">About Us</a>
             <a href="#" class="nav1anch">Contact</a>
 
