--- a/Parbat_map/templates/index.html
+++ b/Parbat_map/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,81 +14,16 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
-    <style>
-        body {
-            font: roboto; 
-            margin: 0;
-            padding:0;
-        }
-
-        header {
-            width: 100%;
-            height: 100px;
-            background: #172035;
-        }
-
-
-        P {
-            font-weight: bold;
-            font-size: xx-large;
-            display: inline-block;
-            color: orange;
-
-        }
-
-        nav {
-            display: inline-block;
-            margin-top: -5px;
-            margin-left: 25px;
-        }
-
-        .nav1anch {
-
-            color: white;
-            margin-left: 110px;
-            margin-right: 110px;
-            text-decoration: none;
-        }
-
-        .nav1anch:hover {
-            color: white;
-            background: gray;
-            padding: 40px;
-        }
-
-        footer {
-            width: 100%;
-            height: 80px;
-            background: #172035;
-            position: 700px;
-        }
-
-        #footer {
-            justify-content: center;
-            text-indent: 600px;
-            color: white;
-            margin-top: 32px;
-            font-size: 1em;
-        }
-
-
-
-
-
-        #mapid {
-            height: 800px;
-        }
-    </style>
+    <link href="{% static '/style.css' %}" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+    {% block main %}
     <header>
-
-
         <nav>
             <p>Fire Risk Map</p>
-            <a href="index.html" class="nav1anch">Home</a>
-            <a href="index1.html" class="nav1anch">About Project</a>
+            <a href="index" class="nav1anch">Home</a>
+            <a href="project" class="nav1anch">About Project</a>
             <a href="#" class="nav1anch">About Us</a>
             <a href="#" class="nav1anch">Contact</a>
 
@@ -95,8 +31,15 @@
 
 
     </header>
-
-    <div id="mapid"></div>
+    {% endblock main %}
+    {% block content1 %}
+    <div id="mapid"> </div>
+    {% endblock content1 %}
+    {% block footer %}
+    <footer>
+        <p id="footer">Copyright © 2020 All Right Reseved</p>
+    </footer>
+    {% endblock footer%}
     <script>
 
         var province;
@@ -109,31 +52,26 @@
             zoomOffset: -1,
             accessToken: 'pk.eyJ1IjoibG9zdGIxIiwiYSI6ImNqaTBjcGd4bjE2cGMza3M2MWEzcTRwd3gifQ.Ps6yKHol2bmEPndMSeYKKw'
         }).addTo(mymap);
-        
+
         var dem = L.tileLayer('{{ dem }}').addTo(mymap);
         var slope = L.tileLayer('{{ slope }}').addTo(mymap);
         var aspect = L.tileLayer('{{ aspect }}').addTo(mymap);
         var lulc = L.tileLayer('{{ lulc }}').addTo(mymap);
-        
+
         var baseMaps1 = {
-        "OSM" :basemap,
-      };
-      var RenderedMap = {
-          "ndvi":dem,
-          "slope":slope,
-          "aspect":aspect,
-          "lulc":lulc
-      };
-      var mylayer = L.control.layers(baseMaps1, RenderedMap).addTo(mymap);
+            "OSM": basemap,
+        };
+        var RenderedMap = {
+            "ndvi": dem,
+            "slope": slope,
+            "aspect": aspect,
+            "lulc": lulc
+        };
+        var mylayer = L.control.layers(baseMaps1, RenderedMap).addTo(mymap);
     </script>
 
 
-    <footer>
-
-
-        <p id="footer">Copyright © 2020 All Right Reseved</p>
-
-    </footer>
+    
 
 
 </body>
