--- a/Parbat_map/templates/project.html
+++ b/Parbat_map/templates/project.html
@@ -1,122 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fire Risk Map</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-    crossorigin="" />
-  <!-- Make sure you put this AFTER Leaflet's CSS -->
-  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-    crossorigin=""></script>
-  <style>
-    body {
-      font: roboto;
-      margin-top: 0px;
-      margin-left: 0px;
-      margin-right: 0px;
-      padding: 0 0 0 0;
-    }
-
-    header {
-      width: 100%;
-      height: 100px;
-      background: #172035;
-      position: static;
-      margin-top: 0px;
-      margin-left: 0px;
-      padding: 0 0 0 0;
-    }
-
-    P {
-      font-weight: bold;
-      font-size: xx-large;
-      display: inline-block;
-      color: transparent;
-    }
-
-    nav {
-      display: inline-block;
-      margin-top: -5px;
-      margin-left: 25px;
-    }
-
-    .nav1anch {
-      color: white;
-      margin-left: 110px;
-      margin-right: 110px;
-      text-decoration: none;
-    }
-
-    .nav1anch:hover {
-      color: white;
-      background: gray;
-      padding: 40px;
-      font-weight: bold;
-    }
-
-    div{
-      background:lightblue;
-    }
-
-    h1 {
-      color: black;
-      text-align: center;
-      margin-top: 50px;
-      margin-bottom: 50px;
-    }
-
-    #content {
-      color: black;
-      font-family: roboto;
-      font-size: 15px;
-      font-weight: normal;
-      padding-left: 50px;
-      padding-right: 50px;
-      text-align: justify;
-    }
-
-    
-
-    footer {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      height: 60px;
-      background:  #172035;
-    }
-
-    #footer {
-        justify-content: center;
-        text-indent: 600px;
-        color: white;
-        margin-top: 32px;
-        font-size: 1em;
-      }
-
-
-    
-  </style>
-</head>
-
-<body>
-  <header>
-    <nav>
-      <p>Fire Risk Map</p>
-      <a href="index.html" class="nav1anch">Home</a>
-      <a href="index1.html" class="nav1anch">Project</a>
-      <a href="#" class="nav1anch">About Us</a>
-      <a href="#" class="nav1anch">Contact</a>
-    </nav>
-  </header>
-
-  <section>
-    <h1>About This Project</h1>
-
+{% extends 'index.html' %}
+{% load static %}
+{% block content1 %}
     <div>
       <p id="content">
         Forest fire frequency is increasing globally with the significant
@@ -156,11 +40,9 @@
         the problems taking into account of the human and biophysical factors.
       </p>
     </div>
-  </section>
-
-  <footer>
-    <p id="footer">Copyright © 2020 All Right Reseved</p>
-  </footer>
+ 
+{%endblock content1 %}
+  
 </body>
 
 </html>
